gcc/ 	PR c/41049 	* real.c decimal_from_integer, decimal_integer_string): New. 	(real_from_integer): Use them as special case for decimal float. 	* config/dfp-bit.c (_si_to_sd, _usi_to_sd): Use default rounding. 	(_di_to_sd, _di_to_dd, _di_to_td, _udi_to_sd, _udi_to_dd, _udi_to_td): 	Do not append zero after the decimal point in string to convert. gcc/testsuite/ 	PR c/41049 	* dfp/pr41049.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151806 138bc75d-0d04-0410-961f-82ee72b054a4